--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <meta name="theme-color" content="#000000" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -19,7 +22,28 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>First Commit - Dig up the first commit of any GitHub repo</title>
+    <meta
+      name="description"
+      content="Dig up the first commit of any GitHub repo"
+    />
+    <meta property="og:title" content="First Commit" />
+    <meta
+      property="og:description"
+      content="Dig up the first commit of any GitHub repo"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://firstcommit.netlify.com" />
+    <meta
+      property="og:image:url"
+      content="https://firstcommit.netlify.com/logo.png"
+    />
+    <meta property="og:image:url:width" content="1200" />
+    <meta property="og:image:url:height" content="630" />
+    <meta
+      name="twitter:image"
+      content="https://firstcommit.netlify.com/logo-600x600.png"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
